fix: z-index on paginate hover

--- a/src/assets/scss/miscellaneous.scss
+++ b/src/assets/scss/miscellaneous.scss
@@ -12,3 +12,7 @@
 .active > .page-link {
   z-index: 0;
 }
+
+.page-item:last-child .page-link {
+  z-index: 0;
+}
